k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docshield-backend-svc
  namespace: docshield
  labels:
    app: docshield-backend
    app.kubernetes.io/name: docshield-backend
    app.kubernetes.io/component: api-backend
    app.kubernetes.io/part-of: docshield-suite
spec:
  type: ClusterIP
  selector:
    app: docshield-backend
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
